welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: identifier expected but integer literal found.
	var h: Int=-1
                    ^